vlib/v/checker/tests/struct_cast_to_struct_pub_err_b.out
vlib/v/checker/tests/struct_cast_to_struct_pub_err_b.vv:12:7: warning: casting to struct is deprecated, use e.g. `Struct{...expr}` instead
   10 | fn main() {
   11 |     abc := Abc{}
   12 |     _ := Xyz(abc)
      |          ~~~~~~~~
   13 | }
vlib/v/checker/tests/struct_cast_to_struct_pub_err_b.vv:12:7: error: cannot convert struct `Abc` to struct `Xyz`
   10 | fn main() {
   11 |     abc := Abc{}
   12 |     _ := Xyz(abc)
      |          ~~~~~~~~
   13 | }
