vlib/v/checker/tests/struct_cast_to_struct_pub_err_b.vv
struct Abc {
	name string
}

struct Xyz {
pub:
	name string
}

fn main() {
	abc := Abc{}
	_ := Xyz(abc)
}
